# nuke

./: Cargo.toml  LICENSE
nu_plugin_nuke/: Cargo.toml
nu_plugin_nuke/src/: graph.rs  main.rs  plugin.rs  sched.rs  task.rs
nu_plugin_nuke/src/utils/: collections.rs  mod.rs
src/: cli.rs  error.rs  main.rs  utils.rs
